[project]
name = "stakeholder-mapping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dash>=3.2.0",
    "kuzu>=0.11.2",
    "loguru>=0.7.3",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "pyvis>=0.3.2",
    "rich>=14.2.0",
    "streamlit>=1.50.0",
]
